--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Mudei de rumo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -27,56 +28,15 @@
     </section>
 
     <section id="comparacao">
-        <h1>Qual curso é melhor?</h1>
-        <p>Recentemente, decidi mudar minha trajetória acadêmica e profissional, trocando o curso de Engenharia Eletrônica por Análise e Desenvolvimento de Sistemas (ADS). A área de programação sempre me atraiu mais, principalmente por ser algo que eu realmente gosto e por ter tido contato com amigos da área desde a adolescência. Para quem, como eu, já fez essa transição, a tabela a seguir compara os dois cursos em termos de duração, salários e empregabilidade, ajudando a entender melhor as diferenças entre eles.</p>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Critério</th>
-                    <th>Engenharia Eletrônica</th>
-                    <th>Análise e Desenvolvimento de Sistemas</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Duração</td>
-                    <td>5 anos</td>
-                    <td>2 anos</td>
-                    <td>2 a 3 anos</td>
-                </tr>
-                <tr>
-                    <td>Média Salarial</td>
-@@ -59,26 +59,32 @@
-                    <td>R$ 20.000,00</td>
-                    <td>R$ 10.000,00</td>
-                </tr>
-                <td>% de Alunos Empregados</td>
-                <td>80%</td>
-                <td>85%</td>
-                <tr>
-                    <td>% de Alunos Empregados</td>
-                    <td>80%</td>
-                    <td>85%</td>
-                </tr>
-            </tbody>
-        </table>
-        <p>A tabela comparativa entre os cursos de <strong>Engenharia Eletrônica e Análise e Desenvolvimento de Sistemas (ADS)</strong> mostra as principais diferenças entre os dois, ajudando a entender melhor o perfil de cada área.</p>
-        <ol type="1">
-            <li><strong>Duração:</strong> A Engenharia Eletrônica exige uma formação mais longa, com duração de 5 anos, enquanto o curso de ADS pode ser concluído em 2 a 3 anos.</li>
-            <li><strong>Média Salarial:</strong> Profissionais formados em Engenharia Eletrônica tendem a receber uma média salarial mais alta, cerca de R$ 6.500,00, enquanto os profissionais de ADS têm uma média de R$ 4.348,45.</li>
-            <li><strong>Salário Inicial:</strong> No início da carreira, os engenheiros eletrônicos começam com um salário de aproximadamente R$ 4.000,00, enquanto os profissionais de ADS iniciam com um valor médio de R$ 2.500,00.</li>
-            <li><strong>Salário Máximo:</strong> O teto salarial de um engenheiro eletrônico pode ultrapassar R$ 20.000,00, enquanto o teto de um profissional de ADS chega a cerca de R$ 10.000,00, dependendo da experiência e especialização.</li>
-            <li><strong>% de Alunos Empregados:</strong> Ambos os cursos têm boas taxas de empregabilidade, com 80% dos alunos de Engenharia Eletrônica e 85% dos alunos de ADS conseguindo um emprego na área após a formação.</li>
-            <li><strong>Média Salarial:</strong> Profissionais formados em Engenharia Eletrônica tendem a receber uma média salarial mais alta, cerca de R$ 8.083,00, enquanto os profissionais de ADS têm uma média de R$ 4.348,45. (Fonte: <a href="https://www.glassdoor.com.br/Sal%C3%A1rios/engenheiro-eletronico-sal%C3%A1rio-SRCH_KO0%2C21.htm?utm_source=chatgpt.com" target="_blank">Glassdoor - Engenharia Eletrônica</a> | <a href="https://www.glassdoor.com.br/Sal%C3%A1rios/desenvolvedor-de-sistemas-sal%C3%A1rio-SRCH_KO0%2C22.htm" target="_blank">Glassdoor - ADS</a>)</li>
-            <li><strong>Salário Inicial:</strong> No início da carreira, os engenheiros eletrônicos começam com um salário de aproximadamente R$ 4.000,00, enquanto os profissionais de ADS iniciam com um valor médio de R$ 2.490,00. (Fonte: <a href="https://www.glassdoor.com.br/Sal%C3%A1rios/engenheiro-eletronico-sal%C3%A1rio-SRCH_KO0%2C21.htm?utm_source=chatgpt.com" target="_blank">Glassdoor - Engenharia Eletrônica</a> | <a href="https://www.glassdoor.com.br/Sal%C3%A1rios/desenvolvedor-de-sistemas-sal%C3%A1rio-SRCH_KO0%2C22.htm" target="_blank">Glassdoor - ADS</a>)</li>
-            <li><strong>Salário Máximo:</strong> O teto salarial de um engenheiro eletrônico pode ultrapassar R$ 20.000,00, enquanto o teto de um profissional de ADS chega a cerca de R$ 10.000,00, dependendo da experiência e especialização. (Fonte: <a href="https://www.glassdoor.com.br/Sal%C3%A1rios/engenheiro-eletronico-sal%C3%A1rio-SRCH_KO0%2C21.htm?utm_source=chatgpt.com" target="_blank">Glassdoor - Engenharia Eletrônica</a> | <a href="https://www.glassdoor.com.br/Sal%C3%A1rios/desenvolvedor-de-sistemas-sal%C3%A1rio-SRCH_KO0%2C22.htm" target="_blank">Glassdoor - ADS</a>)</li>
-            <li><strong>% de Alunos Empregados:</strong> Ambos os cursos têm boas taxas de empregabilidade, com 80% dos alunos de Engenharia Eletrônica e 85% dos alunos de ADS conseguindo um emprego na área após a formação. (Fonte: <a href="https://www.mec.gov.br/" target="_blank">Ministério da Educação</a>)</li>
-        </ol>
-        <p>Essa comparação ajuda a esclarecer as diferenças entre os cursos, considerando fatores como duração, salários e empregabilidade. O objetivo da comparação não é afirmar que um curso é melhor que o outro, mas sim mostrar que são duas ótimas escolhas e que a minha decisão de trocar de curso não é ruim.</p>
-        <p>Embora a média salarial de um engenheiro eletrônico seja alta, vale destacar que a empregabilidade imediata pode variar. Muitos engenheiros eletrônicos, ao se formarem, precisam ganhar experiência em estágio ou até mesmo em posições iniciais antes de alcançar salários mais altos e estabilidade no mercado. A empregabilidade no início da carreira pode não ser automática, e a experiência adquirida ao longo dos anos é essencial para alcançar o teto salarial mencionado.</p>
-        <p>Essa comparação ajuda a esclarecer as diferenças entre os cursos, considerando fatores como duração, salários e empregabilidade. O objetivo da comparação não é afirmar que um curso é melhor que o outro, mas sim mostrar que são duas ótimas escolhas e que a decisão de trocar de curso não é ruim.</p>
+        <div class="container">
+            <div class="header">
+              <h1>Comparação dos Cursos</h1>
+            </div>
         
+            <div class="cards" id="cards-container">
+              <!-- Cards will be inserted here by JavaScript -->
+            </div>
+          </div>
         
     </section>
 
@@ -88,5 +48,7 @@
 
             Sei que a mudança de curso pode ter levantado algumas questões e preocupações, e foi pensando nisso que criei esta área para explicar com mais profundidade os pontos que sei que podem ser as maiores dúvidas para vocês. Aqui, vou focar nas questões que imagino que possam passar pela cabeça de cada um e como estou lidando com elas..</p>
     </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
