Adicionando icone+link do github/linkedin no rodapé

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Mudei de rumo</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <title>Mudei de Curso</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,8 +35,9 @@
                 <p>Além disso, outras frustrações pesavam sobre mim: ainda não tinha um emprego, não tinha minha própria renda e não conseguia estágio, justamente por não estar indo bem no curso. Tudo isso me fazia sentir um fracassado profissionalmente. Quando 2024 estava chegando ao fim, decidi mudar. De dezembro até o final de janeiro, refleti muito e cheguei à conclusão de que não valeria a pena continuar em engenharia. Eu já não sentia mais vontade de estar no curso, ia para as aulas por obrigação, não por interesse genuíno. Como não fiz o ENEM, não conseguiria ingressar em outro curso público, então minha única opção era pagar por um. Mas, para isso, eu precisava primeiro conseguir um emprego. Foi aí que comecei a procurar e encontrei um.</p>
 
                 <h2>E qual curso eu escolhi? Qual caminho vou seguir?</h2>
-                <p>Como já mencionei, quero atuar na área de programação. O curso que escolhi foi Análise e Desenvolvimento de Sistemas, um tecnólogo (curso superior) com duração de quatro semestres (dois anos). Com ele, poderei seguir exatamente a área que desejo: ser programador. Fazia mais sentido investir em um curso de dois anos do que permanecer em um de cinco (que, no meu caso, se tornaria sete ou oito anos). Esse foi mais um fator que me levou a tomar essa decisão.</p>
-                <p>E o que é programação? O que significa ser programador? De forma simples, este próprio site que você está acessando foi programado. Eu mesmo o desenvolvi. Isso é programação. Criei este site para que vocês pudessem ver, na prática, o novo caminho que escolhi seguir. É um site simples, mas é o meu primeiro, criado do zero por mim, com todos os meus acertos e erros.</p>
+                <p>Como já mencionei, quero atuar na área de programação. O curso que escolhi foi <a href="https://cursos.cruzeirodosulvirtual.com.br/grad-analise-e-desenvolvimento-de-sistemas-cruzeiro-do-sul-virtual/p" target="_blank">Análise e Desenvolvimento de Sistemas</a>, um tecnólogo (curso superior) com duração de quatro semestres (dois anos). Com ele, poderei seguir exatamente a área que desejo: ser programador. Fazia mais sentido investir em um curso de dois anos do que permanecer em um de cinco (que, no meu caso, se tornaria sete ou oito anos). Esse foi mais um fator que me levou a tomar essa decisão.</p>
+                <h2>E o que é programação? O que significa ser programador?</h2>
+                <p>De forma simples, este próprio site que você está acessando foi programado. Eu mesmo o desenvolvi. Isso é programação. Criei este site para que vocês pudessem ver, na prática, o novo caminho que escolhi seguir. É um site simples, mas é o meu primeiro, criado do zero por mim, com todos os meus acertos e erros.</p>
             </div>
         </section>
 
@@ -56,7 +57,7 @@
             <div class="container">
                 <h1>Área apenas para meus pais</h1>
                 <div class="login-area" id="login-form">
-                    <p>Esta área contém uma mensagem especial para meus pais. Por favor, digite a senha para acessar.</p>
+                    <p>Esta área é apenas para meus pais. Se você for um deles, digite a senha que te enviei para acessar.</p>
                     <div class="form-group">
                         <label for="password">Senha:</label>
                         <input type="password" id="password" placeholder="Digite a senha">
@@ -75,7 +76,8 @@
 
     <footer>
         <div class="container">
-            <p>Feito com ❤️ para meus pais</p>
+            <a href="https://www.linkedin.com/in/anderson-bento-921564205/" target="_blank"> <img width="30" src="imagens/linkedin.png" alt="logo do linkedin"></a>
+            <a href="https://github.com/duduarb" target="_blank"> <img width="30" src="imagens/github.png" alt="logo do github" target="_blank"></a>
         </div>
     </footer>
 
