Adicionando senha minimamente 'protegida'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 <div class="cards" id="cards-container">
                     <!-- Cards will be inserted here by JavaScript -->
                 </div>
+                <h2>Abaixo, um vídeo sobre se vale a pena entrar no mercado de trabalho de TI nos dias de hoje.</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KwFrvsnxPW0?si=u6Z-HAGHw-AEgO_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+            
         </section>
 
         <section id="restrita" class="hidden">
@@ -67,8 +70,13 @@
                 </div>
                 
                 <div id="restricted-content" class="hidden">
-                    <p>Olá, pais! <br>
-                    Sei que a mudança de curso pode ter levantado algumas questões e preocupações, e foi pensando nisso que criei esta área para explicar com mais profundidade os pontos que sei que podem ser as maiores dúvidas para vocês. Aqui, vou focar nas questões que imagino que possam passar pela cabeça de cada um e como estou lidando com elas.</p>
+                    <h2>Mãe,</h2>
+                    <p>Eu sei o quanto você sempre sonhou em me ver na minha formatura, mas como estou mudando para um curso EAD, acredito que não tenha uma cerimônia presencial. Sei que isso pode ser um pouco decepcionante, mas quero que saiba que estou seguindo meu sonho e que, de qualquer forma, você vai me ver formado.</p>
+                    <h2>Pai,</h2>
+                    <p>Entendo que você possa sentir que esses dois anos foram "perdidos", mas quero te assegurar que não foram. Pelo contrário, foram dois anos de muito aprendizado e crescimento. A Engenharia me proporcionou experiências incríveis, e mesmo "fracassando", amadureci bastante, e consegui vir morar numa boa cidade.</p>
+                    <br>
+                    <br>
+                    <p><em>Bom esse foi o meu site, simples, mas feito por mim. Espero que me apoiem!</em></p>
                 </div>
             </div>
         </section>
