--- a/index.html
+++ b/index.html
@@ -51,14 +51,18 @@
                     <!-- Cards will be inserted here by JavaScript -->
                 </div>
                 <h2>Abaixo, um vídeo sobre se vale a pena entrar no mercado de trabalho de TI nos dias de hoje.</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/KwFrvsnxPW0?si=u6Z-HAGHw-AEgO_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div>
+                    <iframe width="300" height="168" src="https://www.youtube.com/embed/KwFrvsnxPW0?si=u6Z-HAGHw-AEgO_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </div>
             
         </section>
 
         <section id="restrita" class="hidden">
             <div class="container">
-                <h1>Área apenas para meus pais</h1>
+                <div class="header">
+                    <h1>Área apenas para meus pais</h1>
+                </div>
                 <div class="login-area" id="login-form">
                     <p>Esta área é apenas para meus pais. Se você for um deles, digite a senha que te enviei para acessar.</p>
                     <div class="form-group">
@@ -71,7 +75,7 @@
                 
                 <div id="restricted-content" class="hidden">
                     <h2>Mãe,</h2>
-                    <p>Eu sei o quanto você sempre sonhou em me ver na minha formatura, mas como estou mudando para um curso EAD, acredito que não tenha uma cerimônia presencial. Sei que isso pode ser um pouco decepcionante, mas quero que saiba que estou seguindo meu sonho e que, de qualquer forma, você vai me ver formado.</p>
+                    <p>Eu sei o quanto você sempre sonhou em me ver na minha formatura, mas como estou mudando para um curso EAD, acredito que não tenha uma cerimônia presencial. Sei que isso pode ser um pouco decepcionante, mas quero que saiba que estou seguindo uma área que sempre quis trabalhar, de qualquer forma, você vai me ver formado.</p>
                     <h2>Pai,</h2>
                     <p>Entendo que você possa sentir que esses dois anos foram "perdidos", mas quero te assegurar que não foram. Pelo contrário, foram dois anos de muito aprendizado e crescimento. A Engenharia me proporcionou experiências incríveis, e mesmo "fracassando", amadureci bastante, e consegui vir morar numa boa cidade.</p>
                     <br>
